<resources>
    <string name="app_name">Parqueadero UCO</string>
    <string name="bienvenido">Bienvenido (a) escoja una opción</string>
    <string name="configurar_tarifa">Configurarción de tarifas</string>
    <string name="listado_tarifas">Listado de tarifas</string>
    <string name="menu_principal">Menu principal</string>
    <string name="registro_tarifa">Registrar tarifa</string>
    <string name="guardar">Guardar</string>
    <string name="digite_nombre_tarifa">Digite nombre tarifa</string>
    <string name="digite_valor_tarifa">Digite un valor de tarifa</string>
    <string name="requerido">Requerido</string>
    <string name="successfully">La información se ha guardado satisfactoriamente</string>
    <string name="tarifas">Tarifas</string>
    <string name="sin_tarifas">No existen tarifas configuradas en el sistema</string>
    <string name="registrar_ingreso">Registrar ingreso</string>
    <string name="registrar_salida">Registrar salida</string>
    <string name="totalPagar">Total a pagar:</string>
    <string name="cantidadHoras">Cantidad horas:</string>
    <string name="registrsr_ingreso_salida">Registrar ingresos y salidas</string>
    <string name="digitar_placa">Digita una placa</string>
    <string name="buscar">Buscar</string>
    <string name="debe_seleccionar_tarifa">Debe seleccionar una tarifa</string>
    <string name="informacion_guardada_exitosamente">La información se ha guardado exitosamente</string>
    <string name="confirmDialogMessage">Esta seguro de registrar esta salida?</string>
    <string name="confirmDialogTitle">Registrar Salida</string>
    <string name="confirmDelete">Continuar</string>
    <string name="cancelDelete">Cancelar</string>
</resources>
